tests/ui/enum.rs
use partial_config::HasPartial;

#[derive(Debug, HasPartial)]
pub enum Conf {
    Hello, World
}

fn main() {}
